# Bank_RAG_Chatbot

./: .gitignore  README.md
backend/: create_eval_qa.py  evaluate.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/db/: chroma_client.py
backend/app/schemas/: chat_schema.py
backend/app/services/: fusion.py  guardrail_service.py  llm_service.py  monitoring_service.py  reranker_service.py  retrieval_service.py
backend/data/: eval_metrics_results.json  eval_qa.json
backend/data/whoosh_index/: MAIN_wo64l9f8byrtvth1.seg  _MAIN_1.toc
backend/ingestion/: config.py  main.py
backend/ingestion/pipeline/: __init__.py  chunk.py  clean.py  embed.py  extract.py  pipeline.py  store.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Chatbot.jsx  Footer.jsx  Navbar.jsx  ServiceCard.jsx
frontend/src/pages/: About.jsx  Application.jsx  Home.jsx
